--- a/conf/torch_robot_model_gt_panda.yaml
+++ b/conf/torch_robot_model_gt_panda.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 model:
   # any link that is not specified as learnable will be initialized from urdf
-  rel_urdf_path: "panda.urdf"
+  rel_urdf_path: "panda_description/urdf/panda.urdf"
   learnable_rigid_body_config:
     learnable_links: []
   name: "diff_robot_model_gt_panda"
