--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Run black formatting
           command: |
             pip install black
-            black --check .
+            black --check --exclude "docs" .
 
 workflows:
   main:
