--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
             source ~/.bashrc
             conda activate ~/testenv
             pip install -r requirements.txt
-            pip install pybullet
-            pip install pytest
+            pip install -r tests/requirements.txt
       - save_cache:
           key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
