--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     working_directory: ~/differentiable-robot-model
     resource_class: large
     docker:
-      - image: continuumio/miniconda3
+      - image: fairrobotics/kuka-workspace:ubuntu-18
     steps:
       - checkout
       - restore_cache:
