--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - run:
           name: Setup env
           command: |
+            . /opt/conda/etc/profile.d/conda.sh
             conda activate ~/testenv
             pip install -r requirements.txt
             pip install -r tests/requirements.txt
