--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,14 @@ jobs:
       - restore_cache:
           key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
-          name: Setup env
+          name: Create conda environment
           command: |
             . /opt/conda/etc/profile.d/conda.sh
             [ -d ~/testenv ] || conda create -p ~/testenv
+      - run:
+          name: Setup env
+          command: |
+            . /opt/conda/etc/profile.d/conda.sh
             conda activate ~/testenv
             pip install -r requirements.txt
             pip install -r tests/requirements.txt
