--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             curl https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh --output miniconda.sh
             bash miniconda.sh -b -u -p $HOME/miniconda3
             ~/miniconda3/bin/conda init bash
-            bash
+            source ~/.bashrc
       - run:
           name: Setup env
           command: |
