--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,34 +3,37 @@ version: 2.1
 jobs:
   install-and-test:
     working_directory: ~/differentiable-robot-model
-    resource_class: large
-    docker:
-      - image: continuumio/miniconda3
+    resource_class: gpu.nvidia.medium
+    machine:
+      image: ubuntu-1604-cuda-10.2:202012-01
     steps:
       - checkout
       - restore_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
+      - run:
+          name: Install conda
+          command: |
+            curl https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh --output miniconda.sh
+            bash miniconda.sh -b -u -p $HOME/miniconda3
+            ~/miniconda3/bin/conda init bash
       - run:
           name: Setup env
           command: |
-            [ -d ~/testenv ] || conda create -p ~/testenv
-            conda init bash
             source ~/.bashrc
+            [ -d ~/testenv ] || conda create -p ~/testenv python=3.8 -y
             conda activate ~/testenv
             pip install -r requirements.txt
-            pip install pybullet
-            pip install pytest
+            pip install -r tests/requirements.txt
       - save_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - "~/testenv"
+            - "~/miniconda3"
       - run:
           name: Run tests
           command: |
-            conda init bash
             source ~/.bashrc
             conda activate ~/testenv
-            cd ~/differentiable-robot-model
             pip install -e .
             pytest
 
