Update CI black version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ jobs:
       - run:
           name: Run black formatting
           command: |
-            pip install black
+            pip install black==22.1.0
             black --check --exclude "docs" .
 
 workflows:
