--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -3,39 +3,36 @@ name: Publish Python distributions to PyPI and TestPyPI
 on: push
 
 jobs:
-  build-n-publish:
-    name: Build and publish Python distributions to PyPI and TestPyPI
-    runs-on: ubuntu-18.04
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@main
-      with:
-        fetch-depth: 0
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Install pypa/build
-      run: >-
-        python -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel and a source tarball
-      run: >-
-        python -m
-        build
-        --sdist
-        --wheel
-        --outdir dist/
-        .
-    - name: Publish distribution to TestPyPI
-      uses: pypa/gh-action-pypi-publish@release/v1.5
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
-    - name: Publish distribution to PyPI
-      if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@release/v1.5
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+    build-n-publish:
+        name: Build and publish Python distributions to PyPI and TestPyPI
+        runs-on: ubuntu-18.04
+        steps:
+        - uses: actions/checkout@main
+        - name: Set up Python 3.8
+          uses: actions/setup-python@v1
+          with:
+              python-version: 3.8
+        - name: Install pypa/build
+          run: >-
+              python -m
+              pip install
+              build
+              --user
+        - name: Build a binary wheel and a source tarball
+          run: >-
+              python -m
+              build
+              --sdist
+              --wheel
+              --outdir dist/
+              .
+        - name: Publish distribution to TestPyPI
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+              password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+              repository_url: https://test.pypi.org/legacy/
+        - name: Publish distribution to PyPI
+          if: startsWith(github.ref, 'refs/tags')
+          uses: pypa/gh-action-pypi-publish@master
+          with:
+              password: ${{ secrets.TEST_PYPI_API_TOKEN }}
